# EripioEncoder

./: .gitignore  CMakeLists.txt  EripioEncoder.sh  EripioRipper.sh  FolderMaker.sh  README.md  build.sh  main.cpp
legacy/: EripioEncoder.sh
src/: EripioEncoder copy.sh  FolderMaker.sh  encodeLib.cpp  encodeLib.hpp  encoder.cpp  encoder.h  main.cpp  timestamp_cat.sh
